
Limitations and bugs
- To write a rom to the eeprom, you may need to specify the slot number where the MSXPi is plugged - there is not, currently, an automated and failsafe method to detect on whaat slot the epprom is connected.
- The CPLD logic and softwares are not benefiting of the /wait signal (future improvement)

MSXPi v0.8.2 Release Notes
==========================


This version contains all improvements made to all software components. There are changes to the ROM, BIOS, CALL commands, MSXPi-Client and MSX-DOS commands.
The server is officially written in Python, and the C version won't be updated anymore - support will still be available.

What can be done with MSXPi
---------------------------

The MSXPi interface is fully open source, and anyone can develop more applications.
Currently available functionalities and applications:

- Update of MSX-DOS date and time at boot time
- Config RPi wifi
- Run commands on RPi and see output on MSX screen
- Access RPi sd card: list and copy files, load .roms and .bin programs.
- Access Internet: list and copy files, load .roms and .bin programs.
- Use disk images on RPi sd card and boot from them into MSX-DOS
- Play music files on RP, control volume and music loops
- Connect to IRC and chat
- Connect to WhatsApp and chat. Client allows also to register the phone on WhatsApp (experimental, do no user your main WhatsApp phone).


List of features
----------------

- Server written in Python
- Mass transfer performed by C external program, for better performance
- Online updates to all software from a http repository
- Demonstration clients for IRC and WhatsApp, functional.
- Support for both access to SD card on RPi, and remote network files - can list, copy files, run rooms
- MSX-DOS commands to use the interface
- CALL commands to use the interface from BASIC
- BASIC client with command interpreter to use the interface
- CPLD and JTAG for logic reprogramming