@@ -1,0 +1,55 @@
+;|===========================================================================|
+;|                                                                           |
+;| MSXPi Interface                                                           |
+;|                                                                           |
+;| Version : 0.9.0                                                           |
+;|                                                                           |
+;| Copyright (c) 2015-2016 Ronivon Candido Costa (ronivon@outlook.com)       |
+;|                                                                           |
+;| All rights reserved                                                       |
+;|                                                                           |
+;| Redistribution and use in source and compiled forms, with or without      |
+;| modification, are permitted under GPL license.                            |
+;|                                                                           |
+;|===========================================================================|
+;|                                                                           |
+;| This file is part of MSXPi Interface project.                             |
+;|                                                                           |
+;| MSX PI Interface is free software: you can redistribute it and/or modify  |
+;| it under the terms of the GNU General Public License as published by      |
+;| the Free Software Foundation, either version 3 of the License, or         |
+;| (at your option) any later version.                                       |
+;|                                                                           |
+;| MSX PI Interface is distributed in the hope that it will be useful,       |
+;| but WITHOUT ANY WARRANTY; without even the implied warranty of            |
+;| MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the             |
+;| GNU General Public License for more details.                              |
+;|                                                                           |
+;| You should have received a copy of the GNU General Public License         |
+;| along with MSX PI Interface.  If not, see <http://www.gnu.org/licenses/>. |
+;|===========================================================================|
+;
+; File history :
+; 0.1    : Initial version.
+; 0.9.0  : Changes to supoprt new transfer logic
+
+        ORG     $0100
+        CALL    PRECONN
+        LD      HL,PICOMM_ERROR
+        JP      C,PRINT
+        LD      HL,PICOMM_RESTORED
+        JP      PRINT
+
+PICOMM_RESTORED:
+    DB      "Communication restored",13,10,"$"
+PICOMM_ERROR:
+    DB      "Could not restore communication ",13,10,"$"
+
+INCLUDE "include.asm"
+INCLUDE "msxpi_bios.asm"
+INCLUDE "msxpi_io.asm"
+INCLUDE "msxdos_stdio.asm"
+
+
+
+
